<resources>
    <string name="app_name">扬州创业就业</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_ok">确认</string>
    <string name="alert_dialog_finish_title">退出程序</string>
    <string name="alert_dialog_finish">是否退出程序?</string>
    <string name="main_fetch_fail">网络异常</string>
    <string name="NoSignalException">是否对网络进行设置？</string>
    <string name="netWork_set">网络设置</string>
    <string name="loading">正在加载,请稍后...</string>
    <string name="tab_5">就业新闻</string>
    <string name="tab_6">创业新闻</string>
    <string name="tab_7">市场公告</string>
    <string name="tab_8">政策法规</string>
    <string name="tab_9">工资指导价</string>

    <!--<string name="maps_api_key">88fd41604cc3fa0cd81188420064db826765b9262c69b079923ae528b31c5296d39b4c26ce4637b2</string>-->


    <string name="spin_prompt">请选择用工区域</string>


    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_last_update">last update:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;seconds ago</string>
    <string name="cube_ptr_minutes_ago">&#160;minutes ago</string>
    <string name="cube_ptr_hours_ago">&#160;hours ago</string>

    <string name="zph_zt_str">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题:</string>
    <string name="zwxq_gz_str">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;种:</string>
    <string name="zwxq_nl_str">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄:</string>

    <string name="wdjl_xm_str">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:&#160;&#160;</string>
    <string name="wdjl_xg_xm_str">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>

    <string name="wdjl_xb_str">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别:&#160;&#160;</string>
    <string name="wdjl_xg_xb_str">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>

    <string name="wdjl_xl_str">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;历:&#160;&#160;</string>
    <string name="wdjl_xg_xl_str">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;历：</string>

    <string name="wdjl_mz_str">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族:&#160;&#160;</string>
    <string name="wdjl_xg_mz_str">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族：</string>

    <string name="wdjl_sg_str">身&#160;高(cm):&#160;&#160;</string>
    <string name="wdjl_xg_sg_str">身&#160;高(cm)：</string>
    <string name="wdjl_xg_sl_str">视&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;力：</string>

    <string name="px_bm_bt_str">报&#160;&#160;&#160;&#160;名</string>
    <string name="px_kq_bt_str">考&#160;&#160;&#160;&#160;勤</string>
    <string name="px_qt_bt_str">签&#160;&#160;&#160;&#160;退</string>
</resources>
