<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F3F5"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/topTilteStyle"
            android:text="资讯" />
    </RelativeLayout>


    <LinearLayout
        style="@style/Fill"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="10dip" >

                <TextView
                    android:id="@+id/tv_tab_1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/tab_5"
                    android:textColor="@color/blue"
                    android:textSize="12.9sp" />

                <TextView
                    android:id="@+id/tv_tab_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/tab_6"
                    android:textColor="@color/black"
                    android:textSize="12.9sp" />
                <TextView
                    android:id="@+id/tv_tab_3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/tab_7"
                    android:textColor="@color/black"
                    android:textSize="12.9sp" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/tab_8"
                    android:textColor="@color/black"
                    android:textSize="12.9sp" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/tab_9"
                    android:textColor="@color/black"
                    android:textSize="12.9sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="3dip" >

                <ImageView
                    android:id="@+id/iv_bottom_line"
                    android:layout_width="40dip"
                    android:layout_height="2dip"
                    android:scaleType="matrix"
                    android:src="@color/newred" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />
    </LinearLayout>
</LinearLayout>